@@ -1,5 +1,6 @@
 package kr.co.greengram.config.model;
 
+import kr.co.greengram.config.enumcode.model.EnumUserRole;
 import lombok.Getter;
 import org.springframework.security.core.GrantedAuthority;
 import org.springframework.security.core.authority.SimpleGrantedAuthority;
@@ -14,12 +15,13 @@ public class UserPrincipal implements UserDetails {
     private final long memberId;
     private final Collection<? extends GrantedAuthority> authorities;
 
-    public UserPrincipal(long memberId, List<String> roles) {
+    public UserPrincipal(long memberId, List<EnumUserRole> roles) {
         this.memberId = memberId;
-        //this.authorities = roles.stream().map(role -> new SimpleGrantedAuthority(role)).collect(Collectors.toList());
+        //this.authorities = roles.stream().map(role -> new SimpleGrantedAuthority(String.format("ROLE.%s", role.name()))).toList();
         List<SimpleGrantedAuthority> list = new ArrayList<>();
-        for (String role : roles) {
-            list.add(new SimpleGrantedAuthority(role));
+        for (EnumUserRole role : roles) {
+            String roleName = String.format("ROLE_%s", role.name());
+            list.add(new SimpleGrantedAuthority(roleName));
         }
         this.authorities = list;
     }
